# NeuralRipper

./: .dockerignore  .env.prod.example  .gitignore  .releaserc.json  Dockerfile.backend  Dockerfile.frontend  Dockerfile.mlflow  LICENSE  PLAN.md  README.md  RTX-5070Ti-PyTorch-Setup-Guide.md  cloudbuild-mlflow.yaml  cloudbuild.yaml  data_fetch.sh  deploy.sh  dev.sh  docker-compose.prod.yml  docker-compose.yml  download_data.py  dvc.yaml  env.sh  neuralripper-setup.sh  nginx-ssl.conf  nginx.conf  pnpm-lock.yaml  requirements.txt  settings.py
.dvc/: config
.github/workflows/: release.yml
archive/: nginx.conf  package.json
archive/backend/app/: main.py
archive/backend/app/handlers/: run_handler.py
archive/backend/app/schemas/: run.py
archive/backend/app/utils/: modal_deploy.py  model_loader.py
archive/docker/: Dockerfile.frontend  Dockerfile.mlflow  Dockerfile.nginx  docker-compose.build.yml
archive/frontend/: .env.development  pnpm-lock.yaml  tailwind.config.js
archive/frontend/src/: config.ts  main.tsx
archive/frontend/src/components/bars/: Sidebar.tsx
archive/frontend/src/components/dashboard/: Dashboard.tsx  LLMEvalTerminal.tsx
archive/frontend/src/components/portfolio/: Repository.tsx
archive/frontend/src/components/run/: Rerun.tsx  RunDetailCard.tsx  RunList.tsx  RunListCard.tsx  RunMetrics.tsx
archive/frontend/src/components/types/: types.ts
archive/frontend/src/hooks/: useEvalWebSocket.ts
archive/frontend/src/types/: eval.ts
archive/frontend/src/utils/metrics/: cost.ts  index.ts  resources.ts
archive/notebooks/: GPT2-daily-dialog.ipynb  ViT-Base16.ipynb
archive/notebooks/training_lib/: logger.py  mlflow_monitor.py  models.py
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  settings.py
backend/app/: app.py  config.py  main.py
backend/app/handlers/: experiment.py  experiment_handler.py  llm_eval_handler.py  modal_handler.py  pod_handler.bak  pod_handler.py  queue_handler.py  rerun_handler.py  run_handler.py  text_model_handler.py
backend/app/routers/: eval_router.py  experiment.py  experiment_router.py  infer_router.py  rerun_router.py  run_router.py
backend/app/schemas/: experiment.py  metric.py  rerun_schema.py  run.py  run_response.py
backend/app/utils/: modal_deploy.py  model_loader.py  prime_intellect_client.py  share_mlflow_client.py  share_secret_client.py  time_convert.py
backend/db/: base.py  connection.py  inference_result.py  inference_session.py  init.sql  models.py  session.py  user.py
backend/dependencies/: auth.py  db.py
backend/evaluation/: gpu_runner.py  modal.py  modal_app.py
backend/handlers/: modal.py  modal_handler.py
backend/routes/: auth.py  github.py  inference.py  model.py  user.py
backend/schemas/: auth.py  inference.py  model.py  user.py
backend/scripts/: seed_models.py
backend/tests/: test_health.py
data/coco/subset/: images.dvc
data/coco/subset/annotations/: instances_subset.json.dvc
docker/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.mlflow  Dockerfile.nginx  Dockerfile.train  cloudbuild-backend.yaml  cloudbuild-frontend.yaml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  nginx.conf
frontend/: .env.development  .env.production  SETUP.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  client.ts  github.ts  inference.ts  models.ts
frontend/src/components/: Charts.tsx  ExampleResults.tsx  MetricsTable.tsx  Playground.tsx  PromptCard.tsx  ResultCard.tsx  infer.tsx
frontend/src/components/Dashboard/: Dashboard.tsx  EvalTerminal.tsx  LLMEvalTerminal.tsx  Terminal.tsx
frontend/src/components/Experiment/: ExperimentCard.tsx  ExperimentList.tsx
frontend/src/components/Filter/: FilterCard.tsx
frontend/src/components/Metric/: SystemParams.tsx
frontend/src/components/Run/: MetricChart.tsx  MetricDetailCard.tsx  MetricOverviewCard.tsx  Rerun.tsx  RunCard.tsx  RunDetail.tsx  RunDetailCard.tsx  RunList.tsx  RunListCard.tsx  RunMetrics.tsx  SingleMetricCard.tsx
frontend/src/components/Sidebar/: Sidebar.tsx  Titlebar.tsx
frontend/src/components/bars/: Sidebar.tsx  Titlebar.tsx
frontend/src/components/portfolio/: Portfolio.tsx  Repository.tsx
frontend/src/components/types/: statusStyles.ts  types.ts
frontend/src/components/utils/: format.tsx  paramGrouping.tsx
frontend/src/hooks/: useAuth.tsx  useDemoAnimation.ts  useInferenceSocket.ts
frontend/src/types/: index.ts
frontend/src/utils/benchmarks/: accuracy.ts  index.ts  progress.ts
frontend/src/utils/metrics/: performance.ts
infra/: download_data.py  main.tf  outputs.tf  user_data.sh  variables.tf
mysql_pymysql:/root@localhsot:3306/mlflow/0/: meta.yaml
notebooks/: EfficientNet-B0-CIFAR100.ipynb  EfficientNet-B0=CIFAR100.ipynb  GPT2-daily-dialog.ipynb  MobileNetV2.ipynb  ResNet18-CIFAR100.ipynb  ResNet18-COCO2017.ipynb  ViT-Base16.ipynb  yolo_test.py
notebooks/legacy/: EfficientNet-B0-CIFAR100.ipynb  GPT2-daily-dialog.ipynb  MobileNetV2.ipynb  ResNet18-CIFAR100.ipynb  ViT-Base16.ipynb
notebooks/training_lib/: __init__.py  aws_utils.py  data.py  logger.py  trainer.py  utils.py
src/: inference.py  train.py
src/datasets/: coco.py
src/models/: resnet18.py
src/utils/: make_subset.py  transform.py
