[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "alembic==1.16.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "awscli==1.41.15",
    "backcall==0.2.0",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "boto3>=1.39.15",
    "botocore==1.39.15",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "databricks-sdk==0.57.0",
    "datasets==4.0.0",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dill==0.3.8",
    "docker==7.1.0",
    "docopt==0.6.2",
    "docutils==0.19",
    "dotenv==0.9.9",
    "executing==2.2.0",
    "fastapi==0.115.14",
    "fastjsonschema==2.21.1",
    "filelock==3.18.0",
    "flask==3.1.1",
    "fonttools==4.58.5",
    "frozenlist==1.7.0",
    "fsspec==2025.3.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-cloud-core==2.4.3",
    "google-cloud-storage==3.2.0",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "graphene==3.4.3",
    "graphql-core==3.2.6",
    "graphql-relay==3.2.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "httpx>=0.28.1",
    "huggingface-hub==0.33.4",
    "idna==3.10",
    "imageio==2.37.0",
    "importlib-metadata==8.7.0",
    "ipykernel==6.29.5",
    "ipython==8.12.3",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyterlab-pygments==0.3.0",
    "kiwisolver==1.4.8",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.3",
    "mlflow==3.1.1",
    "mlflow-skinny==3.1.1",
    "mpmath==1.3.0",
    "multidict==6.6.3",
    "multiprocess==0.70.16",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "opentelemetry-api==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-semantic-conventions==0.55b1",
    "orjson==3.10.18",
    "packaging==25.0",
    "pandas==2.3.0",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==11.3.0",
    "pipreqs==0.5.0",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyarrow==20.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "rerun-sdk==0.23.4",
    "rpds-py==0.26.0",
    "rsa==4.7.2",
    "s3transfer==0.13.1",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "sympy==1.14.0",
    "thop==0.1.1.post2209072238",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tokenizers==0.21.2",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.53.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "ultralytics==8.3.168",
    "ultralytics-thop==2.0.14",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "wcwidth==0.2.13",
    "websockets>=14.1",
    "webencodings==0.5.1",
    "werkzeug==3.1.3",
    "xxhash==3.5.0",
    "yarg==0.1.9",
    "yarl==1.20.1",
    "zipp==3.23.0",
]
